# cli-tools

./: .env  .env.example  .gitignore  INTERFACE_GEMINI_STYLE.md  INTERFACE_MODERNA.md  LICENSE  MANIFEST.in  PLANO_DE_ACAO.md  PLANO_MODERNIZACAO_UI.md  QA_REPORT.md  README.md  TEXTUAL_DEMO.md  __init__.py  analise_gemini_ux.md  arquitetura.md  build.py  debug_teclas.py  gemini-cli-wibex-report.md  install-interactive.sh  install.sh  plano_gemini_style.md  plano_hibrido_humanos_agents.md  plano_integracao_rich_textual.md  plano_python_gemini.md  pyproject.toml  quick-setup.sh  requirements.txt  run_tests.py  setup.py  test_ascii_responsive.py  update.sh  update_install.sh
.amazonq/: .pre-commit-config.yaml  RELATORIO_ESTRUTURA_CLI.md
.amazonq/rules/: RELATORIO_ESTRUTURA_CLI.md  arquitetura.md  diario_de_bordo.md  policy-check.yml  rules.md  rules.yaml
.amazonq/scripts/: quick_check.sh  setup_hooks.sh  verifica_auto_merge.sh
.github/: CODEOWNERS
.github/workflows/: policy-check.yml  tests.yml
cli-materials/: README.md
cli_tools/: __init__.py  main.py
cli_tools/chat/: app.py  ascii_art.py  messages.py
cli_tools/core/: config.py  interface.py  rich_dashboards.py  rich_dashboards_simple.py
cli_tools/lib/: config_diretorios.py  controle_uso.py  navegacao_cli.py
cli_tools/textual_app/: advanced_app.py  demo_simple.py  main_app.py  styles.tcss
cli_tools/tools/: baixar-repo.py  buscar-imagens.py  extrator-figma.py
data/: config.json
materials/: README.md
scripts/: check_commit_lane.sh  setup_hooks.sh
src/: __init__.py  main.py
src/.local_state/: diretorios.json
src/cache/: metadata.json
src/commands/: __init__.py  figma.py  repo.py  search.py  status.py
src/core/: config.py  config_diretorios.py  config_ia.py  menu.py  navegacao_cli.py  rich_dashboards.py  rich_dashboards_simple.py  visuals.py
src/lib/: __init__.py  apis.py  config.py  ui.py  ui_arrows.py  ui_arrows2.py  ui_backup.py  ui_fixed.py  ui_simple.py  utils.py
src/menu_app/: interactive_menu.py
src/tools/: __init__.py  buscar-imagens.py  extrator-figma.py  figclone.py  image.py  repo.py  status.py
src/ui/: __init__.py  app.py  components.py  gemini_fixed.py  gemini_replica.py  gemini_style.py  launcher.py  simple_app.py  simple_menu.py  themes.py
tests/: __init__.py  test_apis.py  test_config.py  test_ui_validators.py
