[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tools"
version = "2.0.0"
description = "Kit de ferramentas para desenvolvedores com interface interativa"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CLI Tools Team", email = "dev@cli-tools.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Software Development :: Tools",
    "Topic :: Utilities"
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "textual>=0.40.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
cli-tools = "src.main:cli"

[project.urls]
Homepage = "https://github.com/user/cli-tools"
Repository = "https://github.com/user/cli-tools"
Issues = "https://github.com/user/cli-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "data*", "materials*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
