[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tools"
version = "0.1.0"
description = "Kit de ferramentas para desenvolvedores com interface moderna"
authors = [
    {name = "CLI Tools Team"}
]
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
cli-tools = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "materials*"]
